Xilinx: ARM: Updated xilinx_qemu_defconfig for SMP
xilinx_qemu_defconfig has been updated to configure
the kernel with processor local timers disabled since
a problem was found with QEMU when trying to run the
kernel with processor local timers enabled on SMP
enabled QEMU.

--- a/arch/arm/configs/xilinx_qemu_defconfig
+++ b/arch/arm/configs/xilinx_qemu_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux/arm 2.6.39 Kernel Configuration
-# Wed Jul 20 12:10:16 2011
+# Tue Aug  9 16:22:58 2011
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -335,14 +335,13 @@ CONFIG_GENERIC_CLOCKEVENTS_BUILD=y
 CONFIG_SMP=y
 CONFIG_SMP_ON_UP=y
 CONFIG_HAVE_ARM_SCU=y
-CONFIG_HAVE_ARM_TWD=y
 CONFIG_VMSPLIT_3G=y
 # CONFIG_VMSPLIT_2G is not set
 # CONFIG_VMSPLIT_1G is not set
 CONFIG_PAGE_OFFSET=0xC0000000
 CONFIG_NR_CPUS=4
 # CONFIG_HOTPLUG_CPU is not set
-CONFIG_LOCAL_TIMERS=y
+# CONFIG_LOCAL_TIMERS is not set
 # CONFIG_PREEMPT_NONE is not set
 # CONFIG_PREEMPT_VOLUNTARY is not set
 CONFIG_PREEMPT=y
@@ -922,7 +921,6 @@ CONFIG_WATCHDOG=y
 #
 # CONFIG_SOFT_WATCHDOG is not set
 # CONFIG_ARM_SP805_WATCHDOG is not set
-# CONFIG_MPCORE_WATCHDOG is not set
 CONFIG_XILINX_PS_WATCHDOG=y
 # CONFIG_XILINX_SCU_WATCHDOG is not set
 # CONFIG_MAX63XX_WATCHDOG is not set
