Xilinx: USB PS: Added device tree support
Added new of-driver for device tree support.
Modified Makefile and Kconfig for compiling new driver file.
Moved the USB platform device initialization under CONFIG_OF macro.

--- a/drivers/usb/gadget/Kconfig
+++ b/drivers/usb/gadget/Kconfig
@@ -180,6 +180,7 @@ config USB_GADGET_XUSBPS
 	boolean "Xilinx PS Highspeed USB DR Peripheral Controller"
 	depends on ARCH_XILINX
 	select USB_GADGET_DUALSPEED
+	select USB_XUSBPS_DR_OF if OF
 	help
 	   Xilinx PS USB controller core supports device mode.
 
