--- a/drivers/usb/host/Kconfig
+++ b/drivers/usb/host/Kconfig
@@ -126,10 +126,14 @@ config XPS_USB_HCD_XILINX
 		support both high speed and full speed devices, or high speed
 		devices only.
 
+config USB_XUSBPS_DR_OF
+	tristate
+
 config USB_EHCI_XUSBPS
 	bool "Support for Xilinx PS EHCI USB controller"
 	depends on USB_EHCI_HCD && ARCH_XILINX
 	select USB_EHCI_ROOT_HUB_TT
+	select USB_XUSBPS_DR_OF if OF
 	---help---
 		Xilinx PS USB host controller core is EHCI compilant and has
 		transaction translator built-in.
