--- a/arch/arm/mach-xilinx/xilinx.dts
+++ b/arch/arm/mach-xilinx/xilinx.dts
@@ -195,5 +195,59 @@
 			id = <1>;
 		};
 
+		nand: nand@e1000000 {
+			compatible = "xlnx,ps7-nand-1.00.a";
+			reg = <0xE1000000 0x1000000 0xE000E000 0x1000>;
+			#address-cells = <1>;
+			#size-cells = <1>;
+			partition@0 {
+				label = "nand-fsbl";
+				reg = <0x00000000 0x100000>;	/* 1 MB */
+			};
+			partition@1 {
+				label = "nand-u-boot";
+				reg = <0x100000 0x100000>;	/* 1 MB */
+			};
+			partition@2 {
+				label = "nand-linux";
+				reg = <0x200000 0x500000>;	/* 5 MB */
+			};
+			partition@3 {
+				label = "nand-device-tree";
+				reg = <0x700000 0x20000>;	/* 128 KB */
+			};
+			partition@4 {
+				label = "nand-user";
+				reg = <0x720000 0xE0000>;	/* 896 KB */
+			};
+			partition@5 {
+				label = "nand-scratch";
+				reg = <0x800000 0x100000>;	/* 1 MB */
+			};
+			partition@6 {
+				label = "nand-rootfs";
+				reg = <0x900000 0x8000000>;	/* 128 MB */
+			};
+			partition@7 {
+				label = "nand-bitstreams";
+				reg = <0x8900000 0x7700000>;	/* 119 MB */
+			};
+		};
+
+		usb@e0002000 {
+			compatible = "xlnx,ps7-usb-1.00.a";
+			reg = <0xe0002000 0x1000>;
+			interrupts = <53 0>;
+			dr_mode = "otg";
+			phy_type = "ulpi";
+		};
+
+		usb@e0003000 {
+			compatible = "xlnx,ps7-usb-1.00.a";
+			reg = <0xe0003000 0x1000>;
+			interrupts = <76 0>;
+			dr_mode = "host";
+			phy_type = "ulpi";
+		};
 	};
 };
