Xilinx: ARM: BSP: updated device tree for usb peripheral
The device tree was causing both USB controllers to be
setup of hosts rather than the 1st as a device after
moving to kernel version 3.0.

--- a/arch/arm/mach-xilinx/xilinx.dts
+++ b/arch/arm/mach-xilinx/xilinx.dts
@@ -238,7 +238,7 @@
 			compatible = "xlnx,ps7-usb-1.00.a";
 			reg = <0xe0002000 0x1000>;
 			interrupts = <53 0>;
-			dr_mode = "otg";
+			dr_mode = "peripheral";
 			phy_type = "ulpi";
 		};
 
