--- a/arch/arm/mach-xilinx/xilinx.dts
+++ b/arch/arm/mach-xilinx/xilinx.dts
@@ -31,13 +31,13 @@
 		};
 
 		slcr: slcr@f8000000 {
-			compatible = "xlnx,xslcr";
+			compatible = "xlnx,ps7-slcr-1.00.a";
 			reg = <0xF8000000 0x1000>;
 		};
 
 		wdt0: swdt@f8005000 {
 			device_type = "watchdog";
-			compatible = "xlnx,xwdtps";
+			compatible = "xlnx,ps7-wdt-1.00.a";
 			reg = <0xF8005000 0x100>;
 		};
 
@@ -48,21 +48,21 @@
 		};
 	
 		uart0: uart@e0000000 {
-			compatible = "xlnx,xuartps";
+			compatible = "xlnx,ps7-uart-1.00.a";
 			reg = <0xE0000000 0x1000>;
 			interrupts = <59 0>;
 			clock = <50000000>;
 		};
 	
 		uart1: uart@e0001000 {
-			compatible = "xlnx,xuartps";
+			compatible = "xlnx,ps7-uart-1.00.a";
 			reg = <0xE0001000 0x1000>;
 			interrupts = <82 0>;
 			clock = <50000000>;
 		};
 	
 		spi0: spi@e0006000 {
-			compatible = "xlnx,xspips";
+			compatible = "xlnx,ps7-spi-1.00.a";
 			reg = <0xE0006000 0x1000>;
 			interrupts = <58 0>;
 			speed-hz = <50000000>;
@@ -71,7 +71,7 @@
 		};
 
 		spi1: spi@e0007000 {
-			compatible = "xlnx,xspips";
+			compatible = "xlnx,ps7-spi-1.00.a";
 			reg = <0xE0007000 0x1000>;
 			interrupts = <81 0>;
 			speed-hz = <50000000>;
@@ -90,7 +90,7 @@
 		};
 
 		i2c0: i2c@e0004000 {
-			compatible = "xlnx,xi2cps";
+			compatible = "xlnx,ps7-i2c-1.00.a";
 			reg = <0xE0004000 0x1000>;
 			interrupts = <57 0>;
 			bus-id = <0>;
@@ -111,7 +111,7 @@
 		};
 
 		i2c1: i2c@e0005000 {
-			compatible = "xlnx,xi2cps";
+			compatible = "xlnx,ps7-i2c-1.00.a";
 			reg = <0xE0005000 0x1000>;
 			interrupts = <80 0>;
 			bus-id = <1>;
@@ -127,7 +127,7 @@
 		};
 
 		gpio0: gpio@e000a000 {
-			compatible = "xlnx,xgpiops";
+			compatible = "xlnx,ps7-gpio-1.00.a";
 			reg = <0xE000A000 0x1000>;
 			interrupts = <52 0>;
 		};
@@ -181,12 +181,12 @@
                 };
 
 		devcfg: devcfg@f8007000 {
-			compatible = "xlnx,xdevcfg";
+			compatible = "xlnx,ps7-dev-cfg-1.00.a";
 			reg = <0xF8007000 0x1000>;
 			interrupts = <40 0>;
 		};
 		eth0: eth@e000b000 {
-			compatible = "xlnx,xemacps";
+			compatible = "xlnx,ps7-ethernet-1.00.a";
 			reg = <0xE000B000 0x1000>;
 			interrupts = <54 0>;
 			phy_mask = <0xFF7FFFFF>;
@@ -196,7 +196,7 @@
 		};
 
 		eth1: eth@e000c000 {
-			compatible = "xlnx,xemacps";
+			compatible = "xlnx,ps7-ethernet-1.00.a";
 			reg = <0xE000C000 0x1000>;
 			interrupts = <77 0>;
 			phy_mask = <0xFFFEFFFF>;
