--- a/arch/arm/mach-xilinx/Kconfig
+++ b/arch/arm/mach-xilinx/Kconfig
@@ -10,6 +10,22 @@ config XILINX_FIXED_DEVTREE_ADDR
 	  fixed address of 0x1000000 on kernel boot.  This allows the go command
 	  in u-boot to be used since the bootm command is slow in the EP107.
 
+config XILINX_L1_PREFETCH
+	tristate "L1 Cache Prefetch"
+	default y
+	help
+	  This option turns on L1 cache prefetching to get the best performance
+	  in many cases. This may not always be the best performance depending on
+	  the usage. There are some cases where this may cause issues when booting.
+
+config XILINX_L2_PREFETCH
+	tristate "L2 Cache Prefetch"
+	default y
+	help
+	  This option turns on L2 cache prefetching to get the best performance
+	  in many cases. This may not always be the best performance depending on
+	  the usage.
+
 config XILINX_TEST
 	bool "Testing On Kernel Boot"
 	default n
