Xilinx: ARM: SCU WDT: Changed the compatible property
Changed the compatible name of the scuwdt driver to match the IP name
generated by tools. Modified the xilinx.dts file for the same change.

--- a/arch/arm/mach-xilinx/xilinx.dts
+++ b/arch/arm/mach-xilinx/xilinx.dts
@@ -43,7 +43,7 @@
 
 		wdt1: scuwdt@f8f00620 {
 			device_type = "watchdog";
-			compatible = "xlnx,xscuwdt";
+			compatible = "xlnx,ps7-scuwdt-1.00.a";
 			reg = <0xF8F00620 0x20>;
 		};
 	
