--- a/arch/arm/configs/xilinx_zynq_base_trd_defconfig
+++ b/arch/arm/configs/xilinx_zynq_base_trd_defconfig
@@ -1166,7 +1166,7 @@ CONFIG_INPUT_MOUSEDEV_SCREEN_X=1024
 CONFIG_INPUT_MOUSEDEV_SCREEN_Y=768
 # CONFIG_INPUT_JOYDEV is not set
 CONFIG_INPUT_EVDEV=y
-CONFIG_INPUT_EVBUG=y
+# CONFIG_INPUT_EVBUG is not set
 
 #
 # Input Device Drivers
