spi: xilinx-qps: Add support for dual stack and parallel configurations
Added support in the driver to update accordingly the linear qspi
cfg register based on is-dual property.

is-dual=1 implies dual parallel configuration and is-dual=0 could be
single or dual stack and user has to manually enable
CONFIG_SPI_XILINX_PS_QSPI_DUAL_STACKED as Kconfig parameter to
use dual stack configuration.

Created CONFIG_SPI_XILINX_PS_QSPI_DUAL_STACKED Kconfig entry to
provide support for Dual Stack configuration.

Based on SPI_MASTER_U_PAGE bitmask in the transfer flags, choice is
made to select upper/lower flash.

Signed-off-by: Suneel Garapati <suneel.garapati@xilinx.com>
Signed-off-by: Michal Simek <michal.simek@xilinx.com>

--- a/drivers/spi/Kconfig
+++ b/drivers/spi/Kconfig
@@ -460,6 +460,14 @@ config SPI_XILINX_PS_QSPI
 	help
 	  This selects the PS Quad SPI controller master driver from the Xilinx.
 
+config SPI_XILINX_PS_QSPI_DUAL_STACKED
+	bool "Xilinx PS QSPI Dual stacked configuration"
+	depends on SPI_XILINX_PS_QSPI
+	help
+	  This selects the PS Quad SPI controller in dual stacked mode.
+	  Enable this option if your hw design is using dual stacked
+	  configuration.
+
 config SPI_XILINX_PS_SPI
 	tristate "Xilinx PS SPI controller"
 	depends on ARCH_ZYNQ
