--- a/drivers/usb/gadget/Kconfig
+++ b/drivers/usb/gadget/Kconfig
@@ -185,11 +185,13 @@ config USB_FSL_USB2
 	   dynamically linked module called "fsl_usb2_udc" and force
 	   all gadget drivers to also be dynamically linked.
 
-config USB_GADGET_XUSBPS
+config USB_ZYNQ
 	tristate "Xilinx PS Highspeed USB DR Peripheral Controller"
 	depends on ARCH_ZYNQ
+	default USB_GADGET
 	select USB_GADGET_DUALSPEED
 	select USB_XUSBPS_DR_OF if OF
+	select USB_GADGET_SELECTED
 	help
 	   Xilinx PS USB controller core supports device mode.
 
@@ -197,9 +199,9 @@ config USB_GADGET_XUSBPS
 	   dynamically linked module called "xilinx_usbps_udc" and
 	   force all gadget drivers to also be dynamically linked.
 
-config XUSBPS_ERRATA_DT654401
+config USB_ZYNQ_ERRATA_DT654401
 	bool "USB Errata: Adding a dTD to a Primed Endpoint May Not Get Recognized"
-	depends on USB_GADGET_XUSBPS
+	depends on USB_ZYNQ
 	---help---
 	  There is an issue with the add dTD tripwire semaphore (ATDTW bit
 	  in USBCMD register) that can cause the controller to ignore a dTD
@@ -209,12 +211,6 @@ config XUSBPS_ERRATA_DT654401
 
 	  This issue is only applicable for the Zynq silicon revisions < 3.0.
 	  For silicon versions 3.0 and higher, disable this option.
-
-config USB_XUSBPS
-	tristate
-	depends on USB_GADGET_XUSBPS
-	default USB_GADGET
-	select USB_GADGET_SELECTED
 
 config USB_FUSB300
 	tristate "Faraday FUSB300 USB Peripheral Controller"
