usb: host: Rename xusbps-dr-of.c  to zynq-dr-of.c
Use name which should be used in mainline.

Signed-off-by: Michal Simek <michal.simek@xilinx.com>

--- a/arch/arm/configs/xilinx_zynq_drm_defconfig
+++ b/arch/arm/configs/xilinx_zynq_drm_defconfig
@@ -2203,7 +2203,7 @@ CONFIG_USB_EHCI_HCD=y
 CONFIG_USB_EHCI_ROOT_HUB_TT=y
 # CONFIG_USB_EHCI_TT_NEWSCHED is not set
 CONFIG_USB_EHCI_PCI=y
-CONFIG_USB_XUSBPS_DR_OF=y
+CONFIG_USB_ZYNQ_DR_OF=y
 CONFIG_USB_EHCI_XUSBPS=y
 # CONFIG_USB_EHCI_HCD_PLATFORM is not set
 # CONFIG_USB_OXU210HP_HCD is not set
