usb: ehci: Rename ehci-xilinx-usbps.* to ehci-zynq.*
Use name which should be used in mainline.

Signed-off-by: Michal Simek <michal.simek@xilinx.com>

--- a/drivers/usb/host/Kconfig
+++ b/drivers/usb/host/Kconfig
@@ -121,7 +121,7 @@ config USB_ZYNQ_DR_OF
 	select USB_ULPI
 	select USB_ULPI_VIEWPORT
 
-config USB_EHCI_XUSBPS
+config USB_EHCI_ZYNQ
 	bool "Support for Xilinx PS EHCI USB controller"
 	depends on USB_EHCI_HCD && ARCH_ZYNQ
 	select USB_EHCI_ROOT_HUB_TT
