--- a/arch/arm/configs/xilinx_zynq_drm_defconfig
+++ b/arch/arm/configs/xilinx_zynq_drm_defconfig
@@ -2204,7 +2204,7 @@ CONFIG_USB_EHCI_ROOT_HUB_TT=y
 # CONFIG_USB_EHCI_TT_NEWSCHED is not set
 CONFIG_USB_EHCI_PCI=y
 CONFIG_USB_ZYNQ_DR_OF=y
-CONFIG_USB_EHCI_XUSBPS=y
+CONFIG_USB_EHCI_ZYNQ=y
 # CONFIG_USB_EHCI_HCD_PLATFORM is not set
 # CONFIG_USB_OXU210HP_HCD is not set
 # CONFIG_USB_ISP116X_HCD is not set
