--- a/drivers/usb/gadget/Kconfig
+++ b/drivers/usb/gadget/Kconfig
@@ -186,14 +186,14 @@ config USB_FSL_USB2
 	   all gadget drivers to also be dynamically linked.
 
 config USB_ZYNQ
-	tristate "Xilinx PS Highspeed USB DR Peripheral Controller"
+	tristate "Xilinx Zynq Highspeed USB DR Peripheral Controller"
 	depends on ARCH_ZYNQ
 	default USB_GADGET
 	select USB_GADGET_DUALSPEED
 	select USB_ZYNQ_DR_OF if OF
 	select USB_GADGET_SELECTED
 	help
-	   Xilinx PS USB controller core supports device mode.
+	   Xilinx Zynq USB controller core supports device mode.
 
 	   Say "y" to link the driver statically, or "m" to build a
 	   dynamically linked module called "xilinx_usbps_udc" and
