microblaze: timer: Use generic sched_clock implementation
Remove sched_clock from the driver and use setup_check_clock
function.

Signed-off-by: Michal Simek <michal.simek@xilinx.com>

--- a/arch/microblaze/Kconfig
+++ b/arch/microblaze/Kconfig
@@ -30,6 +30,7 @@ config MICROBLAZE
 	select CLONE_BACKWARDS3
 	select CLKSRC_OF
 	select BUILDTIME_EXTABLE_SORT
+	select GENERIC_SCHED_CLOCK
 
 config SWAP
 	def_bool n
