--- a/arch/arm/configs/xilinx_zynq_base_trd_defconfig
+++ b/arch/arm/configs/xilinx_zynq_base_trd_defconfig
@@ -222,7 +222,7 @@ CONFIG_DEFAULT_CFQ=y
 CONFIG_DEFAULT_IOSCHED="cfq"
 CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_MUTEX_SPIN_ON_OWNER=y
-# CONFIG_FREEZER is not set
+CONFIG_FREEZER=y
 
 #
 # System Type
@@ -478,6 +478,7 @@ CONFIG_CMDLINE="console=ttyPS0,115200n8 root=/dev/ram rw initrd=0x00800000,16M e
 CONFIG_CMDLINE_FROM_BOOTLOADER=y
 # CONFIG_CMDLINE_EXTEND is not set
 # CONFIG_CMDLINE_FORCE is not set
+# CONFIG_KEXEC is not set
 # CONFIG_CRASH_DUMP is not set
 CONFIG_AUTO_ZRELADDR=y
 
@@ -543,7 +544,12 @@ CONFIG_COREDUMP=y
 #
 # Power management options
 #
-# CONFIG_SUSPEND is not set
+CONFIG_SUSPEND=y
+CONFIG_SUSPEND_FREEZER=y
+CONFIG_PM_SLEEP=y
+CONFIG_PM_SLEEP_SMP=y
+# CONFIG_PM_AUTOSLEEP is not set
+# CONFIG_PM_WAKELOCKS is not set
 CONFIG_PM_RUNTIME=y
 CONFIG_PM=y
 # CONFIG_PM_DEBUG is not set
@@ -552,8 +558,9 @@ CONFIG_ARCH_HAS_OPP=y
 CONFIG_PM_OPP=y
 CONFIG_PM_CLK=y
 # CONFIG_WQ_POWER_EFFICIENT_DEFAULT is not set
+CONFIG_CPU_PM=y
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
-# CONFIG_ARM_CPU_SUSPEND is not set
+CONFIG_ARM_CPU_SUSPEND=y
 CONFIG_NET=y
 
 #
@@ -701,6 +708,8 @@ CONFIG_FW_LOADER_USER_HELPER=y
 # CONFIG_DEBUG_DEVRES is not set
 # CONFIG_SYS_HYPERVISOR is not set
 # CONFIG_GENERIC_CPU_DEVICES is not set
+CONFIG_REGMAP=y
+CONFIG_REGMAP_I2C=y
 # CONFIG_DMA_SHARED_BUFFER is not set
 # CONFIG_DMA_CMA is not set
 
@@ -879,7 +888,7 @@ CONFIG_BLK_DEV_RAM_SIZE=16384
 # CONFIG_USB_SWITCH_FSA9480 is not set
 CONFIG_SI570=y
 # CONFIG_LATTICE_ECP3_CONFIG is not set
-# CONFIG_SRAM is not set
+CONFIG_SRAM=y
 # CONFIG_C2PORT is not set
 
 #
@@ -1049,7 +1058,7 @@ CONFIG_NET_VENDOR_ARC=y
 # CONFIG_NET_VENDOR_ATHEROS is not set
 CONFIG_NET_CADENCE=y
 # CONFIG_ARM_AT91_ETHER is not set
-# CONFIG_MACB is not set
+CONFIG_MACB=y
 CONFIG_NET_VENDOR_BROADCOM=y
 # CONFIG_B44 is not set
 # CONFIG_BNX2 is not set
@@ -1263,6 +1272,7 @@ CONFIG_TTY=y
 CONFIG_VT=y
 CONFIG_CONSOLE_TRANSLATIONS=y
 CONFIG_VT_CONSOLE=y
+CONFIG_VT_CONSOLE_SLEEP=y
 CONFIG_HW_CONSOLE=y
 CONFIG_VT_HW_CONSOLE_BINDING=y
 CONFIG_UNIX98_PTYS=y
@@ -1391,7 +1401,7 @@ CONFIG_SPI_MASTER=y
 # SPI Master Controller Drivers
 #
 # CONFIG_SPI_ALTERA is not set
-# CONFIG_SPI_BITBANG is not set
+CONFIG_SPI_BITBANG=y
 # CONFIG_SPI_GPIO is not set
 # CONFIG_SPI_FSL_SPI is not set
 # CONFIG_SPI_FSL_DSPI is not set
@@ -1402,7 +1412,7 @@ CONFIG_SPI_MASTER=y
 # CONFIG_SPI_SC18IS602 is not set
 # CONFIG_SPI_TOPCLIFF_PCH is not set
 # CONFIG_SPI_XCOMM is not set
-# CONFIG_SPI_XILINX is not set
+CONFIG_SPI_XILINX=y
 CONFIG_SPI_ZYNQ_QSPI=y
 # CONFIG_SPI_ZYNQ_QSPI_DUAL_STACKED is not set
 CONFIG_SPI_ZYNQ=y
@@ -1465,7 +1475,6 @@ CONFIG_GPIO_ZYNQ=y
 #
 # CONFIG_GPIO_MAX7300 is not set
 # CONFIG_GPIO_MAX732X is not set
-# CONFIG_GPIO_PCA953X_IRQ is not set
 # CONFIG_GPIO_PCF857X is not set
 # CONFIG_GPIO_SX150X is not set
 # CONFIG_GPIO_ADP5588 is not set
@@ -1655,7 +1664,7 @@ CONFIG_ZYNQ_WATCHDOG=y
 # CONFIG_MAX63XX_WATCHDOG is not set
 # CONFIG_ALIM7101_WDT is not set
 # CONFIG_I6300ESB_WDT is not set
-# CONFIG_XILINX_WATCHDOG is not set
+CONFIG_XILINX_WATCHDOG=y
 # CONFIG_MEN_A21_WDT is not set
 
 #
@@ -1918,7 +1927,6 @@ CONFIG_VIDEO_ADV7511=y
 #
 # Customise DVB Frontends
 #
-# CONFIG_DVB_AU8522_V4L is not set
 # CONFIG_DVB_TUNER_DIB0070 is not set
 # CONFIG_DVB_TUNER_DIB0090 is not set
 
@@ -2239,7 +2247,7 @@ CONFIG_USB_ZYNQ_ERRATA_DT654401=y
 # CONFIG_USB_FUSB300 is not set
 # CONFIG_USB_FOTG210_UDC is not set
 # CONFIG_USB_R8A66597 is not set
-# CONFIG_USB_GADGET_XILINX is not set
+CONFIG_USB_GADGET_XILINX=y
 # CONFIG_USB_PXA27X is not set
 # CONFIG_USB_MV_UDC is not set
 # CONFIG_USB_MV_U3D is not set
@@ -2267,7 +2275,6 @@ CONFIG_USB_ZERO=m
 # CONFIG_USB_G_MULTI is not set
 # CONFIG_USB_G_HID is not set
 # CONFIG_USB_G_DBGP is not set
-# CONFIG_USB_G_WEBCAM is not set
 # CONFIG_UWB is not set
 CONFIG_MMC=y
 # CONFIG_MMC_DEBUG is not set
@@ -2431,7 +2438,7 @@ CONFIG_UIO_PDRV_GENIRQ=y
 # CONFIG_UIO_PCI_GENERIC is not set
 # CONFIG_UIO_NETX is not set
 # CONFIG_UIO_MF624 is not set
-# CONFIG_UIO_XILINX_APM is not set
+CONFIG_UIO_XILINX_APM=y
 # CONFIG_VIRT_DRIVERS is not set
 CONFIG_VIRTIO=m
 
@@ -3002,6 +3009,8 @@ CONFIG_CRC32_SLICEBY8=y
 # CONFIG_CRC8 is not set
 CONFIG_ZLIB_INFLATE=y
 CONFIG_ZLIB_DEFLATE=y
+CONFIG_LZO_COMPRESS=y
+CONFIG_LZO_DECOMPRESS=y
 # CONFIG_XZ_DEC is not set
 # CONFIG_XZ_DEC_BCJ is not set
 CONFIG_DECOMPRESS_GZIP=y
