arm64: xilinx: Enable driver for SI5341
This device is available at multiple ZynqMP boards like zcu102/106/111/208
or 216. That's why enable it by default.

Signed-off-by: Michal Simek <michal.simek@xilinx.com>

--- a/arch/arm64/configs/xilinx_zynqmp_defconfig
+++ b/arch/arm64/configs/xilinx_zynqmp_defconfig
@@ -324,6 +324,7 @@ CONFIG_ION=y
 CONFIG_ION_SYSTEM_HEAP=y
 CONFIG_ION_CMA_HEAP=y
 CONFIG_XILINX_FCLK=y
+CONFIG_COMMON_CLK_SI5341=y
 CONFIG_COMMON_CLK_SI570=y
 CONFIG_COMMON_CLK_SI5324=y
 CONFIG_COMMON_CLK_XLNX_CLKWZRD=y
