--- a/arch/arm64/configs/xilinx_defconfig
+++ b/arch/arm64/configs/xilinx_defconfig
@@ -361,6 +361,7 @@ CONFIG_ION_CMA_HEAP=y
 CONFIG_XILINX_APF=y
 CONFIG_XILINX_DMA_APF=y
 CONFIG_XILINX_FCLK=y
+CONFIG_COMMON_CLK_SI5341=y
 CONFIG_COMMON_CLK_SI570=y
 CONFIG_COMMON_CLK_SI5324=y
 CONFIG_COMMON_CLK_XLNX_CLKWZRD=y
