xilinx: Enable drivers for XDP platform
XDP contains several sensors that's why enable drivers for it.

Signed-off-by: Michal Simek <michal.simek@xilinx.com>

--- a/arch/arm64/configs/xilinx_zynqmp_defconfig
+++ b/arch/arm64/configs/xilinx_zynqmp_defconfig
@@ -338,6 +338,9 @@ CONFIG_IIO=y
 CONFIG_INA2XX_ADC=y
 CONFIG_XILINX_XADC=y
 CONFIG_XILINX_AMS=y
+CONFIG_BME680=y
+CONFIG_BMG160=y
+CONFIG_BMC150_MAGN_SPI=y
 CONFIG_XILINX_INTC=y
 CONFIG_RESET_CONTROLLER=y
 CONFIG_RAS=y
