--- a/drivers/misc/xilinx-ai-engine/Makefile
+++ b/drivers/misc/xilinx-ai-engine/Makefile
@@ -15,5 +15,4 @@ xilinx-aie-$(CONFIG_XILINX_AIE) := ai-engine-aie.o \
 				   ai-engine-part.o \
 				   ai-engine-res.o \
 				   ai-engine-reset.o \
-				   ai-engine-rscmgr.o \
-				   ai-engine-sysfs.o \
+				   ai-engine-rscmgr.o
