arm64: xilinx: enable OP-TEE driver
Enable TEE and OP-TEE driver for AMD Versal Gen 2 platform.

Signed-off-by: Akshay Belsare <akshay.belsare@amd.com>
Message-ID: <20250225065527.1092810-1-akshay.belsare@amd.com>

--- a/arch/arm64/configs/xilinx_defconfig
+++ b/arch/arm64/configs/xilinx_defconfig
@@ -588,6 +588,8 @@ CONFIG_FPGA_REGION=y
 CONFIG_OF_FPGA_REGION=y
 CONFIG_FPGA_MGR_ZYNQMP_FPGA=y
 CONFIG_FPGA_MGR_VERSAL_FPGA=y
+CONFIG_TEE=y
+CONFIG_OPTEE=y
 CONFIG_CDX_BUS=y
 CONFIG_CDX_CONTROLLER=m
 CONFIG_EXT3_FS=y
