arm64: versal: Remove the second clock from TTCs
DT binding is describing only one clock that's why remove the second one.

Signed-off-by: Michal Simek <michal.simek@amd.com>
Message-ID: <6944e6cf23196a96e4fdd310cf3ecee3efbc7ee2.1740489228.git.michal.simek@amd.com>

--- a/arch/arm64/boot/dts/xilinx/versal-net-clk-ccf.dtsi
+++ b/arch/arm64/boot/dts/xilinx/versal-net-clk-ccf.dtsi
@@ -352,22 +352,22 @@
 };
 
 &ttc0 {
-	clocks = <&versal_net_clk TTC0>, <&versal_net_clk LPD_LSBUS>;
+	clocks = <&versal_net_clk TTC0>;
 	power-domains = <&versal_net_firmware PM_DEV_TTC_0>;
 };
 
 &ttc1 {
-	clocks = <&versal_net_clk TTC1>, <&versal_net_clk LPD_LSBUS>;
+	clocks = <&versal_net_clk TTC1>;
 	power-domains = <&versal_net_firmware PM_DEV_TTC_1>;
 };
 
 &ttc2 {
-	clocks = <&versal_net_clk TTC2>, <&versal_net_clk LPD_LSBUS>;
+	clocks = <&versal_net_clk TTC2>;
 	power-domains = <&versal_net_firmware PM_DEV_TTC_2>;
 };
 
 &ttc3 {
-	clocks = <&versal_net_clk TTC3>, <&versal_net_clk LPD_LSBUS>;
+	clocks = <&versal_net_clk TTC3>;
 	power-domains = <&versal_net_firmware PM_DEV_TTC_3>;
 };
 
