--- a/arch/arm64/boot/dts/xilinx/versal-clk.dtsi
+++ b/arch/arm64/boot/dts/xilinx/versal-clk.dtsi
@@ -280,22 +280,22 @@
 };
 
 &ttc0 {
-	clocks = <&versal_clk TTC0>, <&versal_clk LPD_LSBUS>;
+	clocks = <&versal_clk TTC0>;
 	power-domains = <&versal_firmware PM_DEV_TTC_0>;
 };
 
 &ttc1 {
-	clocks = <&versal_clk TTC1>, <&versal_clk LPD_LSBUS>;
+	clocks = <&versal_clk TTC1>;
 	power-domains = <&versal_firmware PM_DEV_TTC_1>;
 };
 
 &ttc2 {
-	clocks = <&versal_clk TTC2>, <&versal_clk LPD_LSBUS>;
+	clocks = <&versal_clk TTC2>;
 	power-domains = <&versal_firmware PM_DEV_TTC_2>;
 };
 
 &ttc3 {
-	clocks = <&versal_clk TTC3>, <&versal_clk LPD_LSBUS>;
+	clocks = <&versal_clk TTC3>;
 	power-domains = <&versal_firmware PM_DEV_TTC_3>;
 };
 
