arm64: versal-net: Add compatible to mailbox child node
Add required compatible property as per zynqmp-ipi-mailbox bindings.

Signed-off-by: Tanmay Shah <tanmay.shah@amd.com>
Message-ID: <20250226155618.3068832-1-tanmay.shah@amd.com>

--- a/arch/arm64/boot/dts/xilinx/versal-net-clk-ccf.dtsi
+++ b/arch/arm64/boot/dts/xilinx/versal-net-clk-ccf.dtsi
@@ -137,6 +137,7 @@
 		ranges;
 
 		ipi_mailbox_pmu1: mailbox@eb3f0440 {
+			compatible = "xlnx,zynqmp-ipi-dest-mailbox";
 			reg = <0 0xeb3f0440 0 0x20>,
 			      <0 0xeb3f0460 0 0x20>,
 			      <0 0xeb3f0280 0 0x20>,
