dt-bindings: ufs: amd-versal2: Add power-domains
Describe optional power-domains property. It is optional because power
domain doesn't need to be owned by non secure firmware hence no access to
control it via any driver.

Signed-off-by: Michal Simek <michal.simek@amd.com>
Message-ID: <8c8c7e081c91d78aa4c4281430c642465bcf6f31.1740647928.git.michal.simek@amd.com>
State: pending

--- a/Documentation/devicetree/bindings/ufs/amd,versal2-ufs.yaml
+++ b/Documentation/devicetree/bindings/ufs/amd,versal2-ufs.yaml
@@ -26,6 +26,9 @@ properties:
     items:
       - const: core_clk
 
+  power-domains:
+    maxItems: 1
+
   resets:
     minItems: 2
     maxItems: 2
