arm64: versal-net: add compatible property to destination mailbox
Each child node of mailbox node must have valid compatible string as per
bindings.

Signed-off-by: Tanmay Shah <tanmay.shah@amd.com>
Message-ID: <20250227212538.3316738-1-tanmay.shah@amd.com>
State: pending

--- a/arch/arm64/boot/dts/xilinx/versal-net-vn-x-b2197-01-revA.dts
+++ b/arch/arm64/boot/dts/xilinx/versal-net-vn-x-b2197-01-revA.dts
@@ -97,6 +97,7 @@
 		#size-cells = <2>;
 		ranges;
 		ipi_mailbox_rpu0: mailbox@eb3b1000 {
+			compatible = "xlnx,versal-ipi-dest-mailbox";
 			#mbox-cells = <1>;
 			xlnx,ipi-id = <11>;
 			reg = <0 0xeb3b1000 0 0x1000>;
