--- a/drivers/fpga/Kconfig
+++ b/drivers/fpga/Kconfig
@@ -5,6 +5,7 @@
 
 menuconfig FPGA
 	tristate "FPGA Configuration Framework"
+	select DMA_SHARED_BUFFER
 	help
 	  Say Y here if you want support for configuring FPGAs from the
 	  kernel.  The FPGA framework adds an FPGA manager class and FPGA
