dmaengine: mmi-dcdma: Implement MMI DCDMA driver
The AMD Versal Gen 2 Multimedia Integrated subsystem includes a DMA engine
(MMI DCDMA) designed for feeding memory based framebuffers to the Display
Controller. This DMA engine includes 8 H2C channels:
- 2x3 video data channels to support 2 streams, up to 3 sub-planes each;
- 1 audio data channel;
- 1 hardware cursor data channel;

Signed-off-by: Anatoliy Klymenko <anatoliy.klymenko@amd.com>
Reviewed-by: Vishal Sagar <vishal.sagar@amd.com>
Message-ID: <20250302013256.3853161-3-anatoliy.klymenko@amd.com>
State: pending

--- a/drivers/dma/Kconfig
+++ b/drivers/dma/Kconfig
@@ -85,6 +85,18 @@ config AMCC_PPC440SPE_ADMA
 	help
 	  Enable support for the AMCC PPC440SPe RAID engines.
 
+config AMD_MMI_DCDMA
+	tristate "AMD MMI DCDMA Engine"
+	depends on HAS_IOMEM && OF
+	select DMA_ENGINE
+	select DMA_VIRTUAL_CHANNELS
+	help
+	  Enable support for AMD Multimedia Integrated Display Controller DMA
+	  Engine. The driver provides 8 Host to Card (H2C) DMA channels (6 for
+	  2 planar video streams, 1 for audio, and 1 for hardware cursor).
+	  This driver is required for memory based (non-live) AMD MMI Display
+	  Controller operations.
+
 config APPLE_ADMAC
 	tristate "Apple ADMAC support"
 	depends on ARCH_APPLE || COMPILE_TEST
