--- a/arch/arm64/boot/dts/xilinx/versal-vek280-revB.dts
+++ b/arch/arm64/boot/dts/xilinx/versal-vek280-revB.dts
@@ -79,9 +79,15 @@
 		spi-max-frequency = <20000000>;
 		no-wp;
 		reset-gpios = <&gpio1 12 GPIO_ACTIVE_LOW>;
-		partition@0 {
-			label = "spi0-flash0";
-			reg = <0 0x8000000>;
+		partitions {
+			compatible = "fixed-partitions";
+			#address-cells = <1>;
+			#size-cells = <1>;
+
+			partition@0 {
+				label = "spi0-flash0";
+				reg = <0 0x10000000>;
+			};
 		};
 	};
 };
