arm64: versal: Align power management node with binding
Binding enforcing name to be power-management.

Signed-off-by: Michal Simek <michal.simek@amd.com>
Message-ID: <778edcb7d299b7d5afa029c1a69f6483da8f828c.1741245102.git.michal.simek@amd.com>

--- a/arch/arm64/boot/dts/xilinx/versal-clk.dtsi
+++ b/arch/arm64/boot/dts/xilinx/versal-clk.dtsi
@@ -63,7 +63,7 @@
 				clock-names = "ref", "pl_alt_ref";
 			};
 
-			zynqmp_power: zynqmp-power {
+			zynqmp_power: power-management {
 				compatible = "xlnx,zynqmp-power";
 			};
 
