dt-bindings: net: xlnx,axi-ethernet: Rename DCMAC gpio properties name
DCMAC gpio properties name are renamed by replacing  "_" with "-",
because "_" is not allowed in node and property names.

Signed-off-by: Ravikanth Tuniki <ravikanth.tuniki@amd.com>
Reviewed-by: Harini Katakam <harini.katakam@amd.com>
Message-ID: <20250911052251.10925-2-ravikanth.tuniki@amd.com>
State: pending

--- a/Documentation/devicetree/bindings/net/xlnx,axi-ethernet.yaml
+++ b/Documentation/devicetree/bindings/net/xlnx,axi-ethernet.yaml
@@ -242,26 +242,44 @@ properties:
   max-speed: true
 
   gt_ctrl-gpios:
+    deprecated: true
+
+  gt-ctrl-gpios:
     description: Phandle and specifier for GT control GPIO used to
       configure GT.
 
   gt_rx_dpath-gpios:
+    deprecated: true
+
+  gt-rx-dpath-gpios:
     description: Phandle and specifier for the GPIO used to
       reset GT Rx datapath.
 
   gt_tx_dpath-gpios:
+    deprecated: true
+
+  gt-tx-dpath-gpios:
     description: Phandle and specifier for the GPIO used to
       reset GT Tx datapath.
 
   gt_tx_rst_done-gpios:
+    deprecated: true
+
+  gt-tx-rst-done-gpios:
     description: Phandle and specifier for the GPIO used to
       get GT Tx reset status.
 
   gt_rx_rst_done-gpios:
+    deprecated: true
+
+  gt-rx-rst-done-gpios:
     description: Phandle and specifier for the GPIO used to
       get GT Rx reset status.
 
   gt_rsts-gpios:
+    deprecated: true
+
+  gt-rsts-gpios:
     description: Phandle and specifier for the GPIO used to
       reset Tx and Rx serdes.
 
@@ -405,32 +423,32 @@ allOf:
         max-speed:
           enum: [100000, 200000, 400000]
 
-        gt_ctrl-gpios:
+        gt-ctrl-gpios:
           maxItems: 32
 
-        gt_rx_dpath-gpios:
+        gt-rx-dpath-gpios:
           maxItems: 23
 
-        gt_tx_dpath-gpios:
+        gt-tx-dpath-gpios:
           maxItems: 23
 
-        gt_tx_rst_done-gpios:
+        gt-tx-rst-done-gpios:
           maxItems: 24
 
-        gt_rx_rst_done-gpios:
+        gt-rx-rst-done-gpios:
           maxItems: 24
 
-        gt_rsts-gpios:
+        gt-rsts-gpios:
           maxItems: 14
 
       required:
         - max-speed
-        - gt_ctrl-gpios
-        - gt_rx_dpath-gpios
-        - gt_tx_dpath-gpios
-        - gt_tx_rst_done-gpios
-        - gt_rx_rst_done-gpios
-        - gt_rsts-gpios
+        - gt-ctrl-gpios
+        - gt-rx-dpath-gpios
+        - gt-tx-dpath-gpios
+        - gt-tx-rst-done-gpios
+        - gt-rx-rst-done-gpios
+        - gt-rsts-gpios
 
 additionalProperties: false
 
@@ -545,36 +563,36 @@ examples:
         xlnx,rxmem = <0x8000>;
         max-speed = <100000>;
 
-        gt_ctrl-gpios = <&gpio1 0 0>, <&gpio1 1 0>, <&gpio1 2 0>, <&gpio1 3 0>, <&gpio1 4 0>, <&gpio1 5 0>,
+        gt-ctrl-gpios = <&gpio1 0 0>, <&gpio1 1 0>, <&gpio1 2 0>, <&gpio1 3 0>, <&gpio1 4 0>, <&gpio1 5 0>,
         <&gpio1 6 0>, <&gpio1 7 0>, <&gpio1 8 0>, <&gpio1 9 0>, <&gpio1 10 0>, <&gpio1 11 0>, <&gpio1 12 0>,
         <&gpio1 13 0>, <&gpio1 14 0>, <&gpio1 15 0>, <&gpio1 16 0>, <&gpio1 17 0>, <&gpio1 18 0>,
         <&gpio1 19 0>, <&gpio1 20 0>, <&gpio1 21 0>, <&gpio1 22 0>, <&gpio1 23 0>, <&gpio1 24 0>,
         <&gpio1 25 0>, <&gpio1 26 0>, <&gpio1 27 0>, <&gpio1 28 0>, <&gpio1 29 0>, <&gpio1 30 0>,
         <&gpio1 31 0>;
 
-        gt_rx_dpath-gpios = <&gpio2 0 0>, <&gpio2 1 0>, <&gpio2 2 0>, <&gpio2 3 0>, <&gpio2 4 0>,
+        gt-rx-dpath-gpios = <&gpio2 0 0>, <&gpio2 1 0>, <&gpio2 2 0>, <&gpio2 3 0>, <&gpio2 4 0>,
         <&gpio2 5 0>, <&gpio2 6 0>, <&gpio2 7 0>, <&gpio2 8 0>, <&gpio2 9 0>, <&gpio2 10 0>, <&gpio2 11 0>,
         <&gpio2 12 0>, <&gpio2 13 0>, <&gpio2 14 0>, <&gpio2 15 0>, <&gpio2 16 0>, <&gpio2 17 0>,
         <&gpio2 18 0>, <&gpio2 19 0>, <&gpio2 20 0>, <&gpio2 21 0>, <&gpio2 22 0>;
 
-        gt_tx_dpath-gpios = <&gpio2 0 0>, <&gpio2 1 0>, <&gpio2 2 0>, <&gpio2 3 0>, <&gpio2 4 0>,
+        gt-tx-dpath-gpios = <&gpio2 0 0>, <&gpio2 1 0>, <&gpio2 2 0>, <&gpio2 3 0>, <&gpio2 4 0>,
         <&gpio2 5 0>, <&gpio2 6 0>, <&gpio2 7 0>, <&gpio2 8 0>, <&gpio2 9 0>, <&gpio2 10 0>, <&gpio2 11 0>,
         <&gpio2 12 0>, <&gpio2 13 0>, <&gpio2 14 0>, <&gpio2 15 0>, <&gpio2 16 0>, <&gpio2 17 0>,
         <&gpio2 18 0>, <&gpio2 19 0>, <&gpio2 20 0>, <&gpio2 21 0>, <&gpio2 22 0>;
 
-        gt_tx_rst_done-gpios =  <&gpio3 0 0>, <&gpio3 1 0>, <&gpio3 2 0>, <&gpio3 3 0>, <&gpio3 4 0>,
+        gt-tx-rst-done-gpios =  <&gpio3 0 0>, <&gpio3 1 0>, <&gpio3 2 0>, <&gpio3 3 0>, <&gpio3 4 0>,
         <&gpio3 5 0>, <&gpio3 6 0>, <&gpio3 7 0>, <&gpio3 8 0>, <&gpio3 9 0>, <&gpio3 10 0>,
         <&gpio3 11 0>, <&gpio3 12 0>, <&gpio3 13 0>, <&gpio3 14 0>, <&gpio3 15 0>, <&gpio3 16 0>,
         <&gpio3 17 0>, <&gpio3 18 0>, <&gpio3 19 0>, <&gpio3 20 0>, <&gpio3 21 0>, <&gpio3 22 0>,
         <&gpio3 23 0>;
 
-        gt_rx_rst_done-gpios =  <&gpio3 24 0>, <&gpio3 25 0>, <&gpio3 26 0>, <&gpio3 27 0>,
+        gt-rx-rst-done-gpios =  <&gpio3 24 0>, <&gpio3 25 0>, <&gpio3 26 0>, <&gpio3 27 0>,
         <&gpio3 28 0>, <&gpio3 29 0>, <&gpio3 30 0>, <&gpio3 31 0>, <&gpio3 32 0>, <&gpio3 33 0>,
         <&gpio3 34 0>, <&gpio3 35 0>, <&gpio3 36 0>, <&gpio3 37 0>, <&gpio3 38 0>, <&gpio3 39 0>,
         <&gpio3 40 0>, <&gpio3 41 0>, <&gpio3 42 0>, <&gpio3 43 0>, <&gpio3 44 0>, <&gpio3 45 0>,
         <&gpio3 46 0>, <&gpio3 47 0>;
 
-        gt_rsts-gpios = <&gpio3 0 0>, <&gpio3 1 0>, <&gpio3 2 0>, <&gpio3 3 0>, <&gpio3 4 0>, <&gpio3 5 0>,
+        gt-rsts-gpios = <&gpio3 0 0>, <&gpio3 1 0>, <&gpio3 2 0>, <&gpio3 3 0>, <&gpio3 4 0>, <&gpio3 5 0>,
         <&gpio3 6 0>, <&gpio3 7 0>, <&gpio3 8 0>, <&gpio3 9 0>, <&gpio3 10 0>, <&gpio3 11 0>, <&gpio3 12 0>,
         <&gpio3 13 0>;
     };
