dt-bindings: media: xilinx: Add DT compatible strings
Add missing DT compatible strings.

Signed-off-by: Asif Ikbal <asif.ikbal@amd.com>
Message-ID: <1758003942-3610046-2-git-send-email-asif.ikbal@amd.com>
State: pending

--- a/Documentation/devicetree/bindings/media/xilinx/xlnx,v-vpss-scaler.yaml
+++ b/Documentation/devicetree/bindings/media/xilinx/xlnx,v-vpss-scaler.yaml
@@ -16,7 +16,11 @@ description:
 
 properties:
   compatible:
-    const: xlnx,v-vpss-scaler-1.0
+    items:
+      - enum:
+          - xlnx,v-vpss-scaler
+          - xlnx,v-vpss-scaler-1.0
+          - xlnx,v-vpss-scaler-2.2
 
   reg:
     maxItems: 1
